# test-wundergraph

./: Cargo.toml  README.md  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
src/: generated.rs  lib.rs  main.rs  schema.rs
