[package]
name = "test-wundergraph"
version = "0.1.0"
authors = ["Etienne Prothon <etienne.prothon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["r2d2", "chrono", "serde_json", "postgres"]}
diesel_migrations = "1.4"
juniper = "0.14"
actix-rt = "1"
actix-web = "2.0"
wundergraph = { version = "0.1", features = ["postgres", "chrono", "debug"] }
serde = { version = "1.0",  features= ["derive"] }
serde_json = "1.0"
chrono = "0.4"
env_logger = "0.7"